fix item overflow

--- a/frontend/src/sass/pages/_item-display.scss
+++ b/frontend/src/sass/pages/_item-display.scss
@@ -24,7 +24,7 @@
 			"footer";
 
 		grid-template-columns: 1fr;
-		overflow-y: auto;
+		overflow-y: auto !important;
 		height: 100%;
 	}
 
